# MsInsightForEveryOne

./: .gitignore  .npmrc  .pre-commit-config.yaml  .vscodeignore  CONTRIBUTING.md  DISCLAIMER.md  README.md  package-lock.json  package.json  test_unite.py  vite.config.ts
.cloudbuild/: build.yml  buildLinux.yml  buildPublish.yml  buildWin.yml  dependency.xml
.codecheck/pclintplus/: ascend-insight.lnt  co-gcc.lnt
.gitcode/: .pre-commit-config.yaml  PULL_REQUEST_TEMPLATE.md
.gitcode/pre-commit/: pyproject.toml
docs/: conf.py  index.md
docs/change_history/: 系统调优.md
e2e/: README.md  package-lock.json  package.json  playwright.config.ts
foundation/ideaplugin/: build.gradle
framework/: .eslintrc.cjs  README.md  env.d.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vitest.config.ts
framework/e2e/: communication.spec.ts  details.spec.ts  framework.spec.ts  jupyter.spec.ts  memory.spec.ts  operator.spec.ts  source.spec.ts  summary.spec.ts  timeline.spec.ts  vue.spec.ts
framework/src/: App.vue  main.ts  moduleConfig.ts  version_info.json
framework/tests/: baseOperation.ts  basic.test.ts  communication.test.ts  memory.test.ts  operator.test.ts  selectfolder.test.ts  summary.test.ts  timeline.test.ts
modules/: .eslintrc.js  .npmrc  build-config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
modules/cluster/: README.md  craco.config.js  package.json
modules/compute/: .eslintrc.js  craco.config.js  package.json
modules/framework/: .eslintrc.js  package.json  tsconfig.json
modules/jupyter/: package.json
modules/leaks/: craco.config.js
modules/lib/: .eslintrc.js  craco.config.js  package.json  tsconfig.json
modules/memory/: .eslintrc.js  craco.config.js  package.json
modules/memory-on-chip/: craco.config.js  package.json
modules/operator/: package-lock.json  package.json
modules/reinforcement-learning/: .eslintrc.js  craco.config.js  package.json  tsconfig.json
modules/timeline/: .eslintrc.js  craco.config.js  package-lock.json  package.json  tsconfig.json
modules/triton/: craco.config.js  package.json
modules/triton-new/: craco.config.js  tsconfig.json
platform/: Cargo.toml
platform/.cargo/: config.toml
platform/bundle/: installer.nsi  macos_dmg_settings.json  main.rc
platform/config/: runtime_url_config
platform/src/: cleanup.rs  default.rs  main.rs  webview.rs  webview2err.rs
plugins/intellij/: README.md
plugins/jupyterlab/: .prettierignore  LICENSE  MANIFEST.IN  README.md  install.json  package.json  pyproject.toml  setup.py  tsconfig.json
plugins/vscode/: .npmrc  README.md  package-lock.json  package.json  vsc-extension-quickstart.md  webpack.config.js
scripts/cpu_binding_tools/: README.md  cpu_affinity_data_collection.py  cpu_affinity_data_visualizer.py
scripts/ftrace_tools/: ReadMe.md  trace_convert.py  trace_record.py
scripts/prof2memscope/: README.md  (+1 more)
server/: CMakeLists.txt  README.md
server/msinsight/: CMakeLists.txt
server/msinsight/include/: BasePlugin.h  WsSender.h
server/msinsight/include/base/: BaseModule.h  ModuleRequestHandler.h  ProtocolUtil.h  RequestContext.h
server/msinsight/include/utils/: NumberSafeUtil.h  ServerLog.h
server/msinsight/src/: PluginsManager.cpp  PluginsManager.h  WsSender.cpp  WsSession.h  WsSessionManager.cpp  WsSessionManager.h
server/msinsight/src/base/: BaseModule.cpp  ModuleRequestHandler.cpp  ParamsParser.cpp  ParamsParser.h  ProtocolUtil.cpp  RequestFilter.cpp  RequestFilter.h
server/msinsight/src/utils/: CmdUtil.h  CollectionUtil.h  FileDef.h  FileUtil.cpp  FileUtil.h  IdBuilder.h  JsonUtil.h  LogUtil.h  NumberUtil.h  ProtocolEnumUtil.h  ServerLog.cpp  SocketUtil.h  SpinLockGuard.h  StringUtil.h  SystemUtil.h  ThreadPool.cpp  TimeUtil.h  UtilErrorManager.cpp  UtilErrorManager.h  pch.h
server/src/test/fuzz/: CMakeLists.txt  FuzzDefs.h  FuzzMain.cpp
server/src/test/fuzz/common/: FileUtilTest.cpp  FuzzFileUtil.cpp  FuzzFileUtil.h  ProjectExplorerTest.cpp
server/src/test/fuzz/compute/: ComputeFuzz.h  ComputeInputTest.cpp
server/src/test/fuzz/timeline/: TimelineInputTest.cpp
src/: App.vue  CMakeLists.txt  moduleConfig.ts
src/centralServer/: server.ts
src/centralServer/websocket/: connection.ts
src/channel/: ChannelThread.cpp  ChannelThread.h  UvLoopMgr.cpp
src/components/: ProjectMode.vue  TabPane.vue
src/module/global/handler/: ConfigSetHandler.cpp
src/module/timeline/core/parser/: TraceFileParser.cpp
src/module/timeline/handler/: ImportActionHandler.cpp
src/modules/: ModuleManager.cpp  ModuleRequestHandler.h
src/modules/base/: BaseModule.cpp  BaseModule.h  FileParser.h
src/modules/base/core/: Database.cpp
src/modules/global/handler/: ConfigGetHandler.cpp  ConfigSetHandler.cpp
src/modules/timeline/core/database/: DataBaseManager.cpp  TraceDatabase.cpp  TraceDatabase.h
src/modules/timeline/core/parser/: TraceFileParser.cpp  TraceFileParser.h
src/modules/timeline/handler/: ImportActionHandler.cpp  ImportActionHandler.h
src/protocol/: Protocol.h  ProtocolDefs.h  ProtocolEntity.h  ProtocolEnum.h  ProtocolEnumUtil.h  ProtocolEvent.h  ProtocolMessageBuffer.cpp  ProtocolMessageBuffer.h  ProtocolRequest.h  ProtocolResponse.h  ProtocolUtil.cpp  ProtocolUtil.h  RequestManager.cpp  ResponseUtil.cpp
src/scene/: SceneManager.cpp  SceneManager.h
src/scene/core/database/: Database.cpp  Database.h  TraceDatabase.cpp  TraceDatabase.h
src/scene/core/parser/: FileParser.cpp  FileParser.h
src/scene/core/parser/trace/: EventParser.cpp  EventParser.h  TraceFileParser.cpp  TraceFileParser.h
src/scene/handler/ascend/: ImportActionHandler.cpp
src/scene/handler/global/: ConfigGetHandler.cpp
src/server/: ParamsParser.cpp  ParamsParser.h  ServerLog.h  WsSession.cpp  WsSessionManager.cpp
src/stores/: dataSource.ts  index.ts
src/utils/: FileUtil.h  IdBuilder.h  NumberUtil.h  SafeQueue.h  StringUtil.h  ThreadPool.cpp  ThreadPool.h
src/views/: RemoteManager.vue
src/webview/: RegisterWebview.ts
test/: email_sender.py  run_server_perf_test.py  server_perf_test.py
timeline/: package.json
(+3621 files in other folders)
